# OpenEquivariance

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  benchmark_driver.py  cmake_configure.sh  comparison_driver.py  compile.sh  convolution_driver.py  dev_build.sh  download_mathdx.sh  driver.py  e_comparison_driver.py  env.sh  env_benchmarking.yaml  env_minimal.yaml  environment.yaml  get_gpu_node.sh  mace_benchmark.py  mace_driver.py  pyproject.toml  requirements.txt  single_inst_conf_32x5e__1x5e__32x3e.json
examples/: readme_tutorial.py
fast_tp/: __init__.py
fast_tp/benchmark/: ConvBenchmarkSuite.py  TestBenchmarkSuite.py  benchmark_configs.py  benchmark_utils.py  correctness_utils.py  e3nn_lite_utils.py  perf_metrics_utils.py  random_buffer_utils.py  tpp_creation_utils.py
fast_tp/benchmark/benchmark_routines/: paper_benchmark_uvw.py
fast_tp/benchmark/plotting/: plot_uvu.py  plot_uvw.py
fast_tp/extension/util/: buffer.cpp  jit.cpp
fast_tp/implementations/: CUETensorProduct.py  ComputationSchedule.py  E3NNTensorProduct.py  LoopUnrollTP.py  MultiplicityOuterProductTP.py  NumpyTensorProduct.py  TensorProduct.py  warp_matmul.py
fast_tp/implementations/convolution/: CUEConv.py  Convolution.py  E3NNConv.py  LoopUnrollConv.py  NumpyConv.py
fast_tp/templates/: jinja_utils.py
io/: cif_to_graph.py  load_nequip_configs.py  set_mathdx_env_vars.sh
nonzero_analysis/: cg_tensor_export.py  slice_pattern.py
openequivariance/: __init__.py
openequivariance/benchmark/: ConvBenchmarkSuite.py  TestBenchmarkSuite.py  analysis_utils.py  benchmark_configs.py  benchmark_utils.py  correctness_utils.py  e3nn_lite_utils.py  logging_utils.py  perf_metrics_utils.py  random_buffer_utils.py  tpp_creation_utils.py
openequivariance/benchmark/benchmark_routines/: paper_benchmark_uvw.py
openequivariance/benchmark/plotting/: plot_uvu.py  plot_uvw.py  plotting_utils.py
openequivariance/extension/: CMakeLists.txt  convolution.hpp  hip_wrapper.cpp  kernel_wrapper.cpp  tensorproducts.hpp
openequivariance/extension/convolution/: convolution.hpp  jit_conv.cpp
openequivariance/extension/tensorproducts/: jit_tp.cpp  tensorproducts.hpp
openequivariance/extension/util/: backend_cuda.hpp  backend_hip.hpp  buffer.hpp  device_prop.hpp  jit.cpp  jit.hpp
openequivariance/extlib/: __init__.py
openequivariance/implementations/: CUETensorProduct.py  ComputationSchedule.py  E3NNTensorProduct.py  LoopUnrollTP.py  MultiplicityOuterProductTP.py  NumpyTensorProduct.py  TensorProduct.py  TensorProductBase.py  warp_matmul.py
openequivariance/implementations/convolution/: CUEConv.py  Convolution.py  ConvolutionBase.py  E3NNConv.py  LoopUnrollConv.py  NumpyConv.py  TensorProductConv.py  scatter.py
openequivariance/templates/: common.cuh  jinja_utils.py  loop_unroll_conv_det.cuh  loop_unroll_tp.cuh  macros.jinja  wmm.cuh
recipe/: build.sh  meta.yaml
src/: CMakeLists.txt  pyproject.toml
src/benchmark/: TestBenchmarkSuite.py  analysis_utils.py  benchmark_configs.py  benchmark_suite.py  benchmark_utils.py  calc_data_utils.py  calc_flop_utils.py  correctness_utils.py  e3nn_lite_utils.py  e3nn_tp_utils.py  perf_metrics_utils.py  plot_benchmark.py  random_buffer_utils.py  supplies_utils.py  tpp_creation_utils.py
src/benchmark/benchmark_routines/: paper_benchmark_uvw.py
src/benchmark/benchmark_routines.py/: paper_benchmark_uvw.py
src/benchmark/plotting/: plot_uvu.py  plot_uvw.py  plotting_utils.py
src/comparison/: cue_comparison.py  e3nn.py  e3nn_comparison.py  mace_tutorial.py
src/deprecated/: GemmTP.py  gemm_tp.cu  old_conv_implementations.cuh  old_tp_implementations.cuh  shuffle_tp.cu  thread_tp.cu
src/deprecated/comparison/: cue_comparison.py  e3nn_comparison.py
src/equivariant_spmm/: CMakeLists.txt
src/extension/: CMakeLists.txt
src/implementations/: AtomicConv.py  CUEConv.py  CUETensorProduct.py  ComputationSchedule.py  ComputationScheduler.py  Convolution.py  E3NNConv.py  E3NNTensorProduct.py  GemmTP.py  InstructionInfo.py  LoopReorderUVWTP.py  LoopUnrollConv.py  LoopUnrollTP.py  ManyOneUVWTP.py  MultiplicityOuterProductTP.py  NumpyConv.py  NumpyTensorProduct.py  SMConv.py  ShuffleReduceTP.py  TensorProduct.py  ThreadTP.py  ThreadTensorProduct.py  ThreadTensorProductStaged.py  e3nn_lite.py  scatter.py  warp_matmul.py
src/implementations/convolution/: CUEConv.py  Convolution.py  E3NNConv.py  LoopUnrollConv.py  NumpyConv.py
src/kernel/: CMakeLists.txt  buffer.cpp  buffer.hpp  equivariant_convolution.cu  espmm.cpp  espmm.cu  espmm.hpp  kernel_wrapper.cpp  test.cu  thread_tensor_product.cu  thread_tensor_product_staged.cu  utility.hpp
src/kernel/convolution/: atomic_conv.cu  convolution.hpp  equivariant_convolution.cu  generic_conv.cpp  jit_conv.cpp  sm_conv.cu
src/kernel/tensorproducts/: gemm_tp.cu  generic_tp.cpp  jit_tp.cu  mult_tp.cu  multiplicity_op_tp.cu  shuffle_tp.cu  tensorproducts.hpp  thread_tp.cu  unroll_tp.cu
src/kernel/util/: buffer.hpp  device_prop.cpp  device_prop.hpp  gpu_util.hpp  jit.cpp  jit.hpp  jit_test.cpp  mm_tester.hpp  representation.cpp  representation.hpp  util.hpp
src/py_ext/: test.py
src/templates/: common.cuh  conv_loop_unroll.cuh  jinja_utils.py  loop_reorder_subkernels.cuh  loop_reorder_uvw_cutlass_tp.cuh  loop_reorder_uvw_tp.cuh  loop_unroll.cuh  loop_unroll_batch.cuh  loop_unroll_conv.cuh  loop_unroll_conv_atomic.cuh  loop_unroll_conv_det.cuh  loop_unroll_multirep.cuh  loop_unroll_tp.cuh  macros.jinja  many_one_uvw.cuh  mop_tp.cuh  subkernel_per_interaction_multirep.cuh  wmm.cuh
src/torch_modules/: fast_tp.py  irrep_transposer.py
src/wip/: cif_to_graph.py  spmm.py
src/wrapper/: CMakeLists.txt  kernel_wrapper.cpp  utility.hpp
test/: benchmark.py  benchmark_driver.py  conv_debug.py  convolution_driver.py  driver.py  mace_driver.py  tp_debug.py
