[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openequivariance"
version = "0.1.0"
authors = [
  { name="Austin Scott Glover" },
  { name="Vivek Bharadwaj" }
]
description = "A fast GPU JIT kernel generator for the Clebsch-Gordon Tensor Product"
requires-python = ">=3.11"
dependencies = [
  "ninja",
  "torch"
]

[tool.setuptools.packages.find]
include = ["openequivariance*"]